--- a/app/globals.css
+++ b/app/globals.css
@@ -196,6 +196,10 @@ nav {
   text-decoration: none;
 }
 
+.logo:hover {
+  color: var(--black);
+}
+
 .nav-links {
   display: flex;
   gap: 40px;
@@ -208,6 +212,7 @@ nav {
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.1rem;
+  padding: 5px;
 }
 
 .nav-links a:hover {
@@ -355,6 +360,11 @@ nav {
   text-transform: uppercase;
   background: white;
   color: var(--black);
+
+  &.year {
+    background: var(--secondary);
+    color: var(--black);
+  }
 }
 
 .services {
@@ -497,6 +507,18 @@ a:hover {
   cursor: pointer;
   background: var(--accent);
   outline: var(--border-width) solid var(--black);
+}
+
+.explore:hover {
+  color: var(--black);
+  cursor: pointer;
+  outline: 2px solid var(--black);
+  padding: 5px;
+}
+
+.footer-link a:hover{
+  background-color: transparent;
+  text-decoration: underline !important;
 }
 
 /* @media (max-width: 1200px) {
